--- a/assets/v2/neon/neon-structure.scss
+++ b/assets/v2/neon/neon-structure.scss
@@ -1,6 +1,8 @@
 
 /**
  * neon-structure
+ *
+ * The broad structure of a webpage that uses the Neon styling system, like spacing and size of primary elements
  */
 
 @import 'neon-structure-vars';
