--- a/assets/v2/material/material-components-renderer.scss
+++ b/assets/v2/material/material-components-renderer.scss
@@ -30,6 +30,11 @@
         line-height: $app-bar-height-phone-portrait - $app-bar-vertical-padding;
         line-height: calc(var(--app-bar-height-auto) - var(--app-bar-vertical-padding));
 
+        transition-property: padding, line-height;
+
+        &:first-child {
+            padding: 0 var(--content-margin-horiz-auto);
+        }
     }
 }
 
