--- a/assets/v2/neon/neon-animation-renderer.scss
+++ b/assets/v2/neon/neon-animation-renderer.scss
@@ -29,6 +29,15 @@ html {
 
 
 
+.reduce-motion {
+    &, & * {
+        animation-name: none !important;
+        transition-property: none !important;
+    }
+}
+
+
+
 .app-bar {
     transition-property: background-color, color, height, padding, margin;
 
