Removed underlines from links which don't navigate to a new page
https://research.bhstudios.org/UX/Clickable-Implications/

--- a/assets/v2/neon/neon-renderer.scss
+++ b/assets/v2/neon/neon-renderer.scss
@@ -41,6 +41,15 @@ html {
 	color: var(--theme-primary-color);
 }
 
+:link, :visited {
+    &[href^="#"],
+    &.does-not-navigate-away {
+        text-decoration: none;
+        cursor: default;
+    }
+}
+
+
 
 .app-bar {
 
