--- a/assets/v2/neon/neon-renderer.scss
+++ b/assets/v2/neon/neon-renderer.scss
@@ -68,7 +68,7 @@ html {
     .title {
         .material-icons:first-child,
         .back-to-root-icon {
-            vertical-align: text-bottom;
+            vertical-align: middle;
             margin-right: 1ex;
             margin-inline-end: 1ex;
             width: 1em;
