--- a/assets/v2/material/material-shadows-vars.scss
+++ b/assets/v2/material/material-shadows-vars.scss
@@ -7,6 +7,11 @@
 
 // TODO: Eventually use @apply like in https://github.com/PolymerElements/paper-styles/blob/master/shadow.html
 
+@import 'css-vars';
+$css-vars-use-native: true;
+
+
+
 @function material-shadow($umbra-y-pos, $umbra-blur, $umbra-spread,
                           $penumbra-y-pos, $penumbra-blur, $penumbra-spread,
                           $ambient-y-pos, $ambient-blur) {
@@ -134,3 +139,17 @@
         @return shadow-z1();
     }
 }
+
+
+@include css-vars((
+    --box-shadow-z1: shadow(1),
+    --box-shadow-z2: shadow(2),
+    --box-shadow-z3: shadow(3),
+    --box-shadow-z4: shadow(4),
+    --box-shadow-z6: shadow(6),
+    --box-shadow-z8: shadow(8),
+    --box-shadow-z9: shadow(9),
+    --box-shadow-z12: shadow(12),
+    --box-shadow-z16: shadow(16),
+    --box-shadow-z24: shadow(24),
+))
