--- a/assets/v2/neon/neon-shared-vars.scss
+++ b/assets/v2/neon/neon-shared-vars.scss
@@ -8,16 +8,16 @@ $css-vars-use-native: true;
 
 
 
-$white-theme-background-color: #FFF !default;
-$light-theme-background-color: #FAFAFA !default;
-$dark-theme-background-color: #263238 !default;
-$black-theme-background-color: #000 !default;
+$white-theme-background-color: hsl(0,0, 100%) !default;
+$light-theme-background-color: hsl(0,0, 90%) !default;
+$dark-theme-background-color: hsl(200, 19%, 18%) !default;
+$black-theme-background-color: hsl(0,0, 0) !default;
 $default-theme-background-color: var(--light-theme-background-color) !default;
 
-$white-theme-foreground-color: #212121 !default;
-$light-theme-foreground-color: #212121 !default;
-$dark-theme-foreground-color: #eee !default;
-$black-theme-foreground-color: #eee !default;
+$white-theme-foreground-color: hsl(0, 0%, 13%) !default;
+$light-theme-foreground-color: hsl(0, 0%, 13%) !default;
+$dark-theme-foreground-color: hsl(0, 0%, 93%) !default;
+$black-theme-foreground-color: hsl(0, 0%, 93%) !default;
 $default-theme-foreground-color: var(--light-theme-foreground-color) !default;
 
 
@@ -29,9 +29,9 @@ $default-theme-foreground-color: var(--light-theme-foreground-color) !default;
     --black-theme-background-color:   $black-theme-background-color,
     --default-theme-background-color: $default-theme-background-color,
 
-    --white-theme-foreground-color:          $white-theme-foreground-color,
-    --light-theme-foreground-color:          $light-theme-foreground-color,
-    --dark-theme-foreground-color:           $dark-theme-foreground-color,
-    --black-theme-foreground-color:          $black-theme-foreground-color,
-    --default-theme-foreground-color:        $default-theme-foreground-color,
+    --white-theme-foreground-color:   $white-theme-foreground-color,
+    --light-theme-foreground-color:   $light-theme-foreground-color,
+    --dark-theme-foreground-color:    $dark-theme-foreground-color,
+    --black-theme-foreground-color:   $black-theme-foreground-color,
+    --default-theme-foreground-color: $default-theme-foreground-color,
 ));
