That thing where I restricted only explicitly-decided elements to have the theme brightness was a bad idea

--- a/assets/v2/neon/neon-brightness.scss
+++ b/assets/v2/neon/neon-brightness.scss
@@ -21,32 +21,28 @@
 
 
 
-.brightness-white.themed-background,
-.brightness-white .themed-background {
+.brightness-white {
     --theme-background-color: var(--white-theme-background-color);
     --theme-foreground-color: var(--white-theme-foreground-color);
 }
 
 
 
-.brightness-light.themed-background,
-.brightness-light .themed-background {
+.brightness-light {
     --theme-background-color: var(--light-theme-background-color);
     --theme-foreground-color: var(--light-theme-foreground-color);
 }
 
 
 
-.brightness-dark.themed-background,
-.brightness-dark .themed-background {
+.brightness-dark {
     --theme-background-color: var(--dark-theme-background-color);
     --theme-foreground-color: var(--dark-theme-foreground-color);
 }
 
 
 
-.brightness-black.themed-background,
-.brightness-black .themed-background {
+.brightness-black {
     --theme-background-color: var(--black-theme-background-color);
     --theme-foreground-color: var(--black-theme-foreground-color);
 }
