--- a/assets/v2/material/material-components-renderer.scss
+++ b/assets/v2/material/material-components-renderer.scss
@@ -129,7 +129,9 @@ $button-base-transition-property: transform, box-shadow, color, background, bord
         background: none;
         color: var(--theme-primary-color);
 
-        box-shadow: none;
+        @include css-vars((
+            --button-resting-shadow: none
+        ))
 
         padding: var(--button-flat-padding);
         margin: var(--button-flat-margin);
@@ -141,7 +143,9 @@ $button-base-transition-property: transform, box-shadow, color, background, bord
         background: none;
         color: var(--theme-primary-color);
 
-        box-shadow: none !important;
+        @include css-vars((
+            --button-resting-shadow: none
+        ))
 
         padding: var(--button-app-bar-padding);
         margin: var(--button-app-bar-margin);
